[project]
name = "order-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.1",
    "dependency-injector>=4.47.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "logging>=0.4.9.6",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
]
